daedalus/parser/daedalus_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // Daedalus

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DaedalusParser struct {
	*antlr.BaseParser
}

var daedalusParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func daedalusParserInit() {
	staticData := &daedalusParserStaticData
	staticData.literalNames = []string{
		"", "','", "'...'", "'<<'", "'>>'", "'<='", "'>='", "'=='", "'!='",
		"'%'", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "'('", "')'", "'['",
		"']'", "'{'", "'}'", "'&'", "'&&'", "'|'", "'||'", "'+'", "'-'", "'/'",
		"'*'", "'~'", "'!'", "'='", "'<'", "'>'", "'+='", "'-='", "'*='", "'/='",
		"'&='", "'|='", "'.'", "';'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "IntegerLiteral", "FloatLiteral",
		"StringLiteral", "Var", "Const", "Class", "Prototype", "Instance", "If",
		"Else", "Null", "Return", "Namespace", "Func", "Int", "Float", "StringKeyword",
		"Void", "Event", "Meta", "While", "Continue", "Break", "Test", "Mif",
		"Melif", "Melse", "Mendif", "LeftParen", "RightParen", "LeftBracket",
		"RightBracket", "LeftBrace", "RightBrace", "BitAnd", "And", "BitOr",
		"Or", "Plus", "Minus", "Div", "Star", "Tilde", "Not", "Assign", "Less",
		"Greater", "PlusAssign", "MinusAssign", "StarAssign", "DivAssign", "AndAssign",
		"OrAssign", "Dot", "Semi", "Identifier", "Whitespace", "Newline", "BlockComment",
		"LineComment",
	}
	staticData.ruleNames = []string{
		"daedalusFile", "blockDef", "inlineDef", "macroBlock", "macroCondition",
		"macroElseBlock", "macroElseIfBlock", "macroIfBlock", "macroDef", "testCondition",
		"testBlock", "testBlockStatement", "functionDef", "constDef", "classDef",
		"prototypeDef", "instanceDef", "instanceDecl", "namespaceDef", "mainBlock",
		"contentBlock", "varDecl", "metaValue", "zParserExtenderMeta", "zParserExtenderMetaBlock",
		"constArrayDef", "constArrayAssignment", "constValueDef", "constValueAssignment",
		"varArrayDecl", "varValueDecl", "variadic", "parameterList", "parameterDecl",
		"statementBlock", "statement", "funcCall", "assignment", "ifCondition",
		"elseBlock", "elseIfBlock", "ifBlock", "ifBlockStatement", "returnStatement",
		"whileCondition", "whileBlock", "whileBlockStatement", "funcArgExpression",
		"expressionBlock", "expression", "arrayIndex", "arraySize", "value",
		"referenceAtom", "reference", "typeReference", "anyIdentifier", "nameNode",
		"parentReference", "assignmentOperator", "unaryOperator", "addOperator",
		"bitMoveOperator", "compOperator", "eqOperator", "multOperator", "binAndOperator",
		"binOrOperator", "logAndOperator", "logOrOperator",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DaedalusParserInit initializes any static state used to implement DaedalusParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDaedalusParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DaedalusParserInit() {
	staticData := &daedalusParserStaticData
	staticData.once.Do(daedalusParserInit)
}

// NewDaedalusParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDaedalusParser(input antlr.TokenStream) *DaedalusParser {
	DaedalusParserInit()
	this := new(DaedalusParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &daedalusParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// DaedalusParser tokens.
const (
	DaedalusParserEOF            = antlr.TokenEOF
	DaedalusParserT__0           = 1
	DaedalusParserT__1           = 2
	DaedalusParserT__2           = 3
	DaedalusParserT__3           = 4
	DaedalusParserT__4           = 5
	DaedalusParserT__5           = 6
	DaedalusParserT__6           = 7
	DaedalusParserT__7           = 8
	DaedalusParserT__8           = 9
	DaedalusParserIntegerLiteral = 10
	DaedalusParserFloatLiteral   = 11
	DaedalusParserStringLiteral  = 12
	DaedalusParserVar            = 13
	DaedalusParserConst          = 14
	DaedalusParserClass          = 15
	DaedalusParserPrototype      = 16
	DaedalusParserInstance       = 17
	DaedalusParserIf             = 18
	DaedalusParserElse           = 19
	DaedalusParserNull           = 20
	DaedalusParserReturn         = 21
	DaedalusParserNamespace      = 22
	DaedalusParserFunc           = 23
	DaedalusParserInt            = 24
	DaedalusParserFloat          = 25
	DaedalusParserStringKeyword  = 26
	DaedalusParserVoid           = 27
	DaedalusParserEvent          = 28
	DaedalusParserMeta           = 29
	DaedalusParserWhile          = 30
	DaedalusParserContinue       = 31
	DaedalusParserBreak          = 32
	DaedalusParserTest           = 33
	DaedalusParserMif            = 34
	DaedalusParserMelif          = 35
	DaedalusParserMelse          = 36
	DaedalusParserMendif         = 37
	DaedalusParserLeftParen      = 38
	DaedalusParserRightParen     = 39
	DaedalusParserLeftBracket    = 40
	DaedalusParserRightBracket   = 41
	DaedalusParserLeftBrace      = 42
	DaedalusParserRightBrace     = 43
	DaedalusParserBitAnd         = 44
	DaedalusParserAnd            = 45
	DaedalusParserBitOr          = 46
	DaedalusParserOr             = 47
	DaedalusParserPlus           = 48
	DaedalusParserMinus          = 49
	DaedalusParserDiv            = 50
	DaedalusParserStar           = 51
	DaedalusParserTilde          = 52
	DaedalusParserNot            = 53
	DaedalusParserAssign         = 54
	DaedalusParserLess           = 55
	DaedalusParserGreater        = 56
	DaedalusParserPlusAssign     = 57
	DaedalusParserMinusAssign    = 58
	DaedalusParserStarAssign     = 59
	DaedalusParserDivAssign      = 60
	DaedalusParserAndAssign      = 61
	DaedalusParserOrAssign       = 62
	DaedalusParserDot            = 63
	DaedalusParserSemi           = 64
	DaedalusParserIdentifier     = 65
	DaedalusParserWhitespace     = 66
	DaedalusParserNewline        = 67
	DaedalusParserBlockComment   = 68
	DaedalusParserLineComment    = 69
)

// DaedalusParser rules.
const (
	DaedalusParserRULE_daedalusFile             = 0
	DaedalusParserRULE_blockDef                 = 1
	DaedalusParserRULE_inlineDef                = 2
	DaedalusParserRULE_macroBlock               = 3
	DaedalusParserRULE_macroCondition           = 4
	DaedalusParserRULE_macroElseBlock           = 5
	DaedalusParserRULE_macroElseIfBlock         = 6
	DaedalusParserRULE_macroIfBlock             = 7
	DaedalusParserRULE_macroDef                 = 8
	DaedalusParserRULE_testCondition            = 9
	DaedalusParserRULE_testBlock                = 10
	DaedalusParserRULE_testBlockStatement       = 11
	DaedalusParserRULE_functionDef              = 12
	DaedalusParserRULE_constDef                 = 13
	DaedalusParserRULE_classDef                 = 14
	DaedalusParserRULE_prototypeDef             = 15
	DaedalusParserRULE_instanceDef              = 16
	DaedalusParserRULE_instanceDecl             = 17
	DaedalusParserRULE_namespaceDef             = 18
	DaedalusParserRULE_mainBlock                = 19
	DaedalusParserRULE_contentBlock             = 20
	DaedalusParserRULE_varDecl                  = 21
	DaedalusParserRULE_metaValue                = 22
	DaedalusParserRULE_zParserExtenderMeta      = 23
	DaedalusParserRULE_zParserExtenderMetaBlock = 24
	DaedalusParserRULE_constArrayDef            = 25
	DaedalusParserRULE_constArrayAssignment     = 26
	DaedalusParserRULE_constValueDef            = 27
	DaedalusParserRULE_constValueAssignment     = 28
	DaedalusParserRULE_varArrayDecl             = 29
	DaedalusParserRULE_varValueDecl             = 30
	DaedalusParserRULE_variadic                 = 31
	DaedalusParserRULE_parameterList            = 32
	DaedalusParserRULE_parameterDecl            = 33
	DaedalusParserRULE_statementBlock           = 34
	DaedalusParserRULE_statement                = 35
	DaedalusParserRULE_funcCall                 = 36
	DaedalusParserRULE_assignment               = 37
	DaedalusParserRULE_ifCondition              = 38
	DaedalusParserRULE_elseBlock                = 39
	DaedalusParserRULE_elseIfBlock              = 40
	DaedalusParserRULE_ifBlock                  = 41
	DaedalusParserRULE_ifBlockStatement         = 42
	DaedalusParserRULE_returnStatement          = 43
	DaedalusParserRULE_whileCondition           = 44
	DaedalusParserRULE_whileBlock               = 45
	DaedalusParserRULE_whileBlockStatement      = 46
	DaedalusParserRULE_funcArgExpression        = 47
	DaedalusParserRULE_expressionBlock          = 48
	DaedalusParserRULE_expression               = 49
	DaedalusParserRULE_arrayIndex               = 50
	DaedalusParserRULE_arraySize                = 51
	DaedalusParserRULE_value                    = 52
	DaedalusParserRULE_referenceAtom            = 53
	DaedalusParserRULE_reference                = 54
	DaedalusParserRULE_typeReference            = 55
	DaedalusParserRULE_anyIdentifier            = 56
	DaedalusParserRULE_nameNode                 = 57
	DaedalusParserRULE_parentReference          = 58
	DaedalusParserRULE_assignmentOperator       = 59
	DaedalusParserRULE_unaryOperator            = 60
	DaedalusParserRULE_addOperator              = 61
	DaedalusParserRULE_bitMoveOperator          = 62
	DaedalusParserRULE_compOperator             = 63
	DaedalusParserRULE_eqOperator               = 64
	DaedalusParserRULE_multOperator             = 65
	DaedalusParserRULE_binAndOperator           = 66
	DaedalusParserRULE_binOrOperator            = 67
	DaedalusParserRULE_logAndOperator           = 68
	DaedalusParserRULE_logOrOperator            = 69
)

// IDaedalusFileContext is an interface to support dynamic dispatch.
type IDaedalusFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDaedalusFileContext differentiates from other interfaces.
	IsDaedalusFileContext()
}

type DaedalusFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDaedalusFileContext() *DaedalusFileContext {
	var p = new(DaedalusFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DaedalusParserRULE_daedalusFile
	return p
}

func (*DaedalusFileContext) IsDaedalusFileContext() {}

func NewDaedalusFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DaedalusFileContext {
	var p = new(DaedalusFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DaedalusParserRULE_daedalusFile

	return p
}

func (s *DaedalusFileContext) GetParser() antlr.Parser { return s.parser }

func (s *DaedalusFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(DaedalusParserEOF, 0)
}

func (s *DaedalusFileContext) MainBlock() IMainBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainBlockContext)
}

func (s *DaedalusFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DaedalusFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DaedalusFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.EnterDaedalusFile(s)
	}
}

func (s *DaedalusFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.ExitDaedalusFile(s)
	}
}

func (p *DaedalusParser) DaedalusFile() (localctx IDaedalusFileContext) {
	this := p
	_ = this

	localctx = NewDaedalusFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DaedalusParserRULE_daedalusFile)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(141)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&17729576960) != 0 {
		{
			p.SetState(140)
			p.MainBlock()
		}

	}
	{
		p.SetState(143)
		p.Match(DaedalusParserEOF)
	}

	return localctx
}

// IBlockDefContext is an interface to support dynamic dispatch.
type IBlockDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockDefContext differentiates from other interfaces.
	IsBlockDefContext()
}

type BlockDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockDefContext() *BlockDefContext {
	var p = new(BlockDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DaedalusParserRULE_blockDef
	return p
}

func (*BlockDefContext) IsBlockDefContext() {}

func NewBlockDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockDefContext {
	var p = new(BlockDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DaedalusParserRULE_blockDef

	return p
}

func (s *BlockDefContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockDefContext) Semi() antlr.TerminalNode {
	return s.GetToken(DaedalusParserSemi, 0)
}

func (s *BlockDefContext) FunctionDef() IFunctionDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDefContext)
}

func (s *BlockDefContext) ClassDef() IClassDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassDefContext)
}

func (s *BlockDefContext) PrototypeDef() IPrototypeDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrototypeDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrototypeDefContext)
}

func (s *BlockDefContext) InstanceDef() IInstanceDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstanceDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstanceDefContext)
}

func (s *BlockDefContext) NamespaceDef() INamespaceDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamespaceDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamespaceDefContext)
}

func (s *BlockDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.EnterBlockDef(s)
	}
}

func (s *BlockDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.ExitBlockDef(s)
	}
}

func (p *DaedalusParser) BlockDef() (localctx IBlockDefContext) {
	this := p
	_ = this

	localctx = NewBlockDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DaedalusParserRULE_blockDef)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(150)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DaedalusParserFunc:
		{
			p.SetState(145)
			p.FunctionDef()
		}

	case DaedalusParserClass:
		{
			p.SetState(146)
			p.ClassDef()
		}

	case DaedalusParserPrototype:
		{
			p.SetState(147)
			p.PrototypeDef()
		}

	case DaedalusParserInstance:
		{
			p.SetState(148)
			p.InstanceDef()
		}

	case DaedalusParserNamespace:
		{
			p.SetState(149)
			p.NamespaceDef()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	{
		p.SetState(152)
		p.Match(DaedalusParserSemi)
	}

	return localctx
}

// IInlineDefContext is an interface to support dynamic dispatch.
type IInlineDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInlineDefContext differentiates from other interfaces.
	IsInlineDefContext()
}

type InlineDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInlineDefContext() *InlineDefContext {
	var p = new(InlineDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DaedalusParserRULE_inlineDef
	return p
}

func (*InlineDefContext) IsInlineDefContext() {}

func NewInlineDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InlineDefContext {
	var p = new(InlineDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DaedalusParserRULE_inlineDef

	return p
}

func (s *InlineDefContext) GetParser() antlr.Parser { return s.parser }

func (s *InlineDefContext) Semi() antlr.TerminalNode {
	return s.GetToken(DaedalusParserSemi, 0)
}

func (s *InlineDefContext) ConstDef() IConstDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstDefContext)
}

func (s *InlineDefContext) VarDecl() IVarDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarDeclContext)
}

func (s *InlineDefContext) InstanceDecl() IInstanceDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstanceDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstanceDeclContext)
}

func (s *InlineDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InlineDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InlineDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.EnterInlineDef(s)
	}
}

func (s *InlineDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DaedalusListener); ok {
		listenerT.ExitInlineDef(s)
	}
}

func (p *DaedalusParser) InlineDef() (localctx IInlineDefContext) {
	this := p
	_ = this

	localctx = NewInlineDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DaedalusParserRULE_inlineDef)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(157)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DaedalusParserConst:
		{
			p.SetState(154)
			p.ConstDef()
		}

	case DaedalusParserVar:
		{
			p.SetState(155)
			p.VarDecl()
		}

	case DaedalusParserInstance:
		{
			p.SetState(156)
			p.InstanceDecl()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	{
		p.SetState(159)
		p.Match(DaedalusParserSemi)
	}

	return localctx
}

// IMacroBlockContext is an interface to support dynamic dispatch.
type IMacroBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMacroBlockContext differentiates from other interfaces.
	IsMacroBlockContext()
}

type MacroBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMacroBlockContext() *MacroBlockContext {
	var p = new(MacroBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DaedalusParserRULE_macroBlock
	return p
}

func (*MacroBlockContext) IsMacroBlockContext() {}

func NewMacroBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MacroBlockContext {
	var p = new(MacroBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DaedalusParserRULE_macroBlock

	return p
}

func (s *MacroBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *MacroBlockContext) BlockDef() IBlockDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}
